# scdl-android

./: Cargo.toml  README.md  settings.gradle.kts
.github/workflows/: build.yml  leanrepoaction.yml  main.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/rs/scdownload/: MainActivity.kt  Navigation.kt  PanicActivity.kt  PanicScreen.kt  PlayerActivity.kt  SelectSwfScreen.kt  TextFieldState.kt  UrlState.kt
app/src/main/java/rs/scdownload/ui/theme/: Color.kt  Theme.kt  Type.kt
src/: download.rs  logging.rs  main.rs
