[package]
# Underscore because the cargo-ndk gradle plugin doesn't transform a hyphen to it.
name = "scdl_android"
version = "0.0.1"
authors = ["Psylo"]
edition = "2025"
resolver = "2"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "symbols"

[dependencies]
android-activity = { version = "0.6.0", features = ["game-activity"] }
android_logger = "0.14.1"
jni = "0.21.1"
ndk = { version = "0.9.0", features = ["audio"] }
ndk-context = "0.1.1"
# ruffle_frontend_utils = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
log = "0.4.25"
tracing = {version = "0.1.41", features = ["log", "log-always"]}
backtrace = "0.3.74"
url = "2.5.2"
webbrowser = "1.0.3"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}

[features]
jpegxr = ["ruffle_core/jpegxr"]
