[package]
# Underscore because the cargo-ndk gradle plugin doesn't transform a hyphen to it.
name = "scdl_android"
version = "0.0.1"
authors = ["Psylo"]
edition = "2018"
resolver = "2"

[profile.release]
strip = "symbols"

[dependencies]
# Android Activity
android-activity = { version = "0.6.0", features = ["game-activity"] }
android_logger = "0.14.1"

# Android JNI Bindings
jni = "0.21.1"

# Android NDK
ndk = { version = "0.9.0", features = ["audio"] }
ndk-context = "0.1.1"

# SCDownload Dependencies
id3 = "1.7.0"
regex = "1.9.5"
reqwest = {version="0.11.20",features = ["rustls-tls","blocking"]}
